shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_limit(shaderc_compile_options_t options, int limit, int value)
     * }
     */
    public static void shaderc_compile_options_set_limit(MemorySegment options, int limit, int value) {
        var mh$ = shaderc_compile_options_set_limit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_limit", options, limit, value);
            }
            mh$.invokeExact(options, limit, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_auto_bind_uniforms {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_auto_bind_uniforms");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_bind_uniforms(shaderc_compile_options_t options, int auto_bind)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_auto_bind_uniforms$descriptor() {
        return shaderc_compile_options_set_auto_bind_uniforms.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_bind_uniforms(shaderc_compile_options_t options, int auto_bind)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_auto_bind_uniforms$handle() {
        return shaderc_compile_options_set_auto_bind_uniforms.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_bind_uniforms(shaderc_compile_options_t options, int auto_bind)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_auto_bind_uniforms$address() {
        return shaderc_compile_options_set_auto_bind_uniforms.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_bind_uniforms(shaderc_compile_options_t options, int auto_bind)
     * }
     */
    public static void shaderc_compile_options_set_auto_bind_uniforms(MemorySegment options, int auto_bind) {
        var mh$ = shaderc_compile_options_set_auto_bind_uniforms.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_auto_bind_uniforms", options, auto_bind);
            }
            mh$.invokeExact(options, auto_bind);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_auto_combined_image_sampler {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_auto_combined_image_sampler");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_combined_image_sampler(shaderc_compile_options_t options, int upgrade)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_auto_combined_image_sampler$descriptor() {
        return shaderc_compile_options_set_auto_combined_image_sampler.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_combined_image_sampler(shaderc_compile_options_t options, int upgrade)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_auto_combined_image_sampler$handle() {
        return shaderc_compile_options_set_auto_combined_image_sampler.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_combined_image_sampler(shaderc_compile_options_t options, int upgrade)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_auto_combined_image_sampler$address() {
        return shaderc_compile_options_set_auto_combined_image_sampler.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_auto_combined_image_sampler(shaderc_compile_options_t options, int upgrade)
     * }
     */
    public static void shaderc_compile_options_set_auto_combined_image_sampler(MemorySegment options, int upgrade) {
        var mh$ = shaderc_compile_options_set_auto_combined_image_sampler.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_auto_combined_image_sampler", options, upgrade);
            }
            mh$.invokeExact(options, upgrade);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(shaderc_compile_options_t options, shaderc_shader_kind shader_kind, const char *reg, const char *set, const char *binding)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage$descriptor() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(shaderc_compile_options_t options, shaderc_shader_kind shader_kind, const char *reg, const char *set, const char *binding)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage$handle() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(shaderc_compile_options_t options, shaderc_shader_kind shader_kind, const char *reg, const char *set, const char *binding)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage$address() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(shaderc_compile_options_t options, shaderc_shader_kind shader_kind, const char *reg, const char *set, const char *binding)
     * }
     */
    public static void shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(MemorySegment options, int shader_kind, MemorySegment reg, MemorySegment set, MemorySegment binding) {
        var mh$ = shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage", options, shader_kind, reg, set, binding);
            }
            mh$.invokeExact(options, shader_kind, reg, set, binding);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_hlsl_register_set_and_binding {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_hlsl_register_set_and_binding");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding(shaderc_compile_options_t options, const char *reg, const char *set, const char *binding)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_set_hlsl_register_set_and_binding$descriptor() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding(shaderc_compile_options_t options, const char *reg, const char *set, const char *binding)
     * }
     */
    public static MethodHandle shaderc_compile_options_set_hlsl_register_set_and_binding$handle() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding(shaderc_compile_options_t options, const char *reg, const char *set, const char *binding)
     * }
     */
    public static MemorySegment shaderc_compile_options_set_hlsl_register_set_and_binding$address() {
        return shaderc_compile_options_set_hlsl_register_set_and_binding.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_set_hlsl_register_set_and_binding(shaderc_compile_options_t options, const char *reg, const char *set, const char *binding)
     * }
     */
    public static void shaderc_compile_options_set_hlsl_register_set_and_binding(MemorySegment options, MemorySegment reg, MemorySegment set, MemorySegment binding) {
        var mh$ = shaderc_compile_options_set_hlsl_register_set_and_binding.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_set_hlsl_register_set_and_binding", options, reg, set, binding);
            }
            mh$.invokeExact(options, reg, set, binding);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_set_hlsl_functionality1 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_set_hlsl_functionality1");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
